--- a/SampleManagement2/res/values/dimens.xml
+++ b/SampleManagement2/res/values/dimens.xml
@@ -4,4 +4,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+<dimen name="image_top_margin">15dp</dimen>
+    <dimen name="textview_top_margin">6dp</dimen>
+    <dimen name="linearlayout_right_margin">40dp</dimen>
+    <dimen name="linearlayout_end_margin">0dp</dimen>
+    <dimen name="button_width">80dp</dimen>
+    <dimen name="button_height">40dp</dimen>
+    <dimen name="button_magin_top">20dp</dimen>
+    <dimen name="button_font_size">13sp</dimen>
+    <dimen name="sub_layout_magin_left">7dp</dimen>
+
 </resources>
