--- a/SampleManagement2/res/menu/main.xml
+++ b/SampleManagement2/res/menu/main.xml
@@ -3,9 +3,32 @@
     tools:context="com.lge.samplemanagement2.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/export"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/one_export"/>
+
+<item
+        android:id="@+id/import_model"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/model_import"/>
+    <item
+        android:id="@+id/import_user"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/user_import"/>
+    <item
+        android:id="@+id/import_lend"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/lend_import"/>
+    <item
+        android:id="@+id/manage"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/user_manage"/>
+
+
 
 </menu>
