--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="条码值"
+                android:text="@string/phone_id"
                 android:id="@+id/textView"
                 android:layout_weight="0.72"
                 android:background="@android:color/holo_green_dark" />
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="型号名"
+                android:text="@string/model_name"
                 android:id="@+id/textView2"
                 android:background="@android:color/holo_green_dark"
                 android:layout_weight="0.20" />
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2.36"
                 android:ems="10"
-                android:text="条码值" />
+                android:text="@string/phone_id" />
 
             <Button
                 android:id="@+id/button1"
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="借用人"
+                android:text="@string/user_name"
                 android:id="@+id/textView4"
                 android:layout_weight="0.22"
                 android:background="@android:color/holo_green_dark" />
@@ -93,7 +93,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="借用日期"
+                android:text="@string/lend_date"
                 android:id="@+id/textView5"
                 android:layout_weight="0.29"
                 android:background="@android:color/holo_green_dark" />
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="归还日期"
+                android:text="@string/return_date"
                 android:id="@+id/textView6"
                 android:layout_weight="0.41"
                 android:background="@android:color/holo_green_dark" />
@@ -116,12 +116,12 @@
             android:weightSum="1">
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_weight="0.32"
                 android:text="龙鸿鹏"
-                android:id="@+id/textView7"
-                android:layout_weight="0.15"/>
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -143,7 +143,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="扫描"
+            android:text="@string/doscan"
             android:id="@+id/button"
             android:layout_weight="0.03"
             android:background="@android:color/holo_blue_bright"
@@ -152,7 +152,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="确定归还"
+            android:text="@string/return_confirm"
             android:id="@+id/button3"
             android:layout_weight="0.03"
             android:background="@android:color/holo_blue_light" />
@@ -161,7 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="如无法扫描请手动输入并点击ok"
+            android:text="@string/othernote"
             android:id="@+id/textView10"
             android:layout_weight="0.03"
             android:textColor="#510303" />
