--- a/SampleManagement2/res/values/dimens.xml
+++ b/SampleManagement2/res/values/dimens.xml
@@ -14,4 +14,7 @@
     <dimen name="button_font_size">13sp</dimen>
     <dimen name="sub_layout_magin_left">7dp</dimen>
 
+        <dimen name="label_font_size">20dip</dimen>
+	<dimen name="title_padding">30px</dimen>
+	<dimen name="sub_title_margin">20px</dimen>
 </resources>
