--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -31,7 +31,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/phone_id"
                 android:id="@+id/textView"
-                android:layout_weight="0.72"
+                android:layout_weight="0.80"
                 android:background="@android:color/holo_green_dark" />
 
             <TextView
@@ -41,7 +41,7 @@
                 android:text="@string/model_name"
                 android:id="@+id/textView2"
                 android:background="@android:color/holo_green_dark"
-                android:layout_weight="0.20" />
+                android:layout_weight="0.30" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,7 +53,7 @@
                 android:id="@+id/editText"
                 android:layout_width="103dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2.36"
+                android:layout_weight="0.70"
                 android:ems="10"
                 android:text="@string/phone_id" />
 
@@ -62,13 +62,14 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="33dp"
+                 android:layout_weight="0.10"
                 android:text="ok" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.64"
+                android:layout_weight="0.20"
                 android:text="ph2"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -86,17 +87,17 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/user_name"
                 android:id="@+id/textView4"
-                android:layout_weight="0.22"
+                android:layout_weight="0.20"
                 android:background="@android:color/holo_green_dark" />
 
             <TextView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/lend_date"
                 android:id="@+id/textView5"
-                android:layout_weight="0.29"
-                android:background="@android:color/holo_green_dark" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/holo_green_dark"
+                android:text="@string/lend_date"
+                android:layout_weight="0.40"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -104,7 +105,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/return_date"
                 android:id="@+id/textView6"
-                android:layout_weight="0.41"
+                android:layout_weight="0.40"
                 android:background="@android:color/holo_green_dark" />
         </LinearLayout>
 
@@ -119,23 +120,24 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.32"
+                android:layout_weight="0.20"
                 android:text="熊大"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
+                android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/textView8"
-                android:layout_weight="0.23" />
+                android:layout_weight="0.40"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
+                android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/textView9"
-                android:layout_weight="0.48" />
+                android:layout_weight="0.40"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
         </LinearLayout>
 
         <Button
