--- a/SampleManagement2/res/layout/activity_main_title.xml
+++ b/SampleManagement2/res/layout/activity_main_title.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_vertical"
-        android:text="主页"
+        android:text="@string/MAIN"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
