--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -54,8 +54,7 @@
                 android:layout_width="103dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.70"
-                android:ems="10"
-                android:text="@string/phone_id" />
+                android:ems="10" />
 
             <Button
                 android:id="@+id/button1"
@@ -70,7 +69,6 @@
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.20"
-                android:text="ph2"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </LinearLayout>
@@ -121,7 +119,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.20"
-                android:text="熊大"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
