--- a/SampleManagement2/res/layout/activity_query_details.xml
+++ b/SampleManagement2/res/layout/activity_query_details.xml
@@ -3,20 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+<!--  
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <TextView
-            android:layout_width="8dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="[" 
-            android:textColor="@color/black"/>
+            android:text="@string/id" />
 
         <TextView
             android:id="@+id/details_id"
@@ -27,16 +26,8 @@
             android:padding="2dip"
             android:textColor="@color/black" />
 
-        <TextView
-            android:layout_width="8dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:gravity="left"
-            android:padding="2dip"
-            android:text="]" 
-            android:textColor="@color/black"/>
     </LinearLayout>
-
+-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +39,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="型号名：" />
+            android:text="@string/model_name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_model"
@@ -70,7 +65,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="SPMS ID：" />
+            android:text="@string/phone_id" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_spmsId"
@@ -92,7 +91,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="Email ID：" />
+            android:text="@string/ad_id" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_email"
@@ -114,7 +117,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="姓名：" />
+            android:text="@string/user_name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_name"
@@ -136,7 +143,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="借出日期：" />
+            android:text="@string/lend_date" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_lendDate"
@@ -158,7 +169,11 @@
             android:layout_gravity="left"
             android:gravity="right"
             android:padding="2dip"
-            android:text="预计返还日期：" />
+            android:text="@string/expired_date" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=": " />
 
         <TextView
             android:id="@+id/details_expireDate"
@@ -177,16 +192,18 @@
             android:layout_gravity="left"
             android:gravity="left"
             android:padding="2dip"
-            android:text="备注：" />
+            android:text="@string/memo" />
 
         <TextView
             android:id="@+id/details_memo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:padding="2dip"
             android:textColor="@color/black" 
-            android:gravity="left"/>
+            android:gravity="left"
+            android:background="@drawable/details_activity2"
+            />
 
          <TextView
             android:layout_width="110dp"
@@ -194,7 +211,7 @@
             android:layout_gravity="left"
             android:gravity="left"
             android:padding="2dip"
-            android:text="签名：" />
+            android:text="@string/sign_info" />
 
 
     <ImageView
@@ -202,6 +219,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:src="@drawable/imageview_bg_color" />
+        android:src="@drawable/imageview_bg_color" 
+        android:background="@drawable/details_activity2"/>
 
 </LinearLayout>
