--- a/SampleManagement2/res/layout/activity_query_list_header.xml
+++ b/SampleManagement2/res/layout/activity_query_list_header.xml
@@ -13,7 +13,7 @@
 
             <TextView 
                 android:id="@+id/list_header_id"
-                android:text="序号" 
+                android:text="@string/id" 
                 android:layout_width="40dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"
@@ -22,7 +22,7 @@
            
             <TextView 
                 android:id="@+id/list_header_model"
-                android:text="型号名" 
+                android:text="@string/model_name" 
                 android:layout_width="60dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"
@@ -32,7 +32,7 @@
            
             <TextView 
                 android:id="@+id/list_header_spmsId"
-                android:text="样机编号" 
+                android:text="@string/phone_id" 
                 android:layout_width="130dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"
@@ -40,7 +40,7 @@
                 />
           <TextView 
                 android:id="@+id/list_header_email"
-                android:text="Email ID"
+                android:text="@string/ad_id"
                 android:layout_width="120dip" 
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" 
@@ -49,7 +49,7 @@
             
             <TextView 
                 android:id="@+id/list_header_name"
-                android:text="借用人" 
+                android:text="@string/user_name" 
                 android:layout_width="60dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"
@@ -59,7 +59,7 @@
           
             <TextView 
                 android:id="@+id/list_header_lendDate"
-                android:text="借出日期"
+                android:text="@string/lend_date"
                 android:layout_width="100dip" 
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" 
@@ -68,7 +68,7 @@
           
             <TextView 
                 android:id="@+id/list_header_expireDate"
-                android:text="预计返还日期"
+                android:text="@string/expired_date"
                 android:layout_width="100dip" 
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" 
@@ -77,7 +77,7 @@
             
             <TextView 
                 android:id="@+id/list_header_more"
-                android:text="更多"
+                android:text="@string/more"
                 android:layout_width="35dip" 
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" 
