--- a/SampleManagement2/res/layout/activity_query_otherfunction.xml
+++ b/SampleManagement2/res/layout/activity_query_otherfunction.xml
@@ -11,19 +11,19 @@
             android:id="@+id/showAll"
             android:layout_width="75dp"
             android:layout_height="33dp"
-            android:text="Show All"
+            android:text="@string/showAll"
             android:textSize="12.5sp"/>
        <Button
             android:id="@+id/clear"
             android:layout_width="60dp"
             android:layout_height="33dp"
-            android:text="Clear"
+            android:text="@string/clear"
             android:textSize="12.5sp"/>
        <Button
             android:id="@+id/export"
             android:layout_width="65dp"
             android:layout_height="33dp"
-            android:text="Export"
+            android:text="@string/export"
             android:textSize="12.5sp"/>
        
 </LinearLayout>
