--- a/SampleManagement2/res/layout/activity_query_search.xml
+++ b/SampleManagement2/res/layout/activity_query_search.xml
@@ -20,7 +20,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:hint="型号名"
+            android:hint="@string/model_name"
             android:completionThreshold="1"
             android:dropDownHeight="1000dp"
             
@@ -32,7 +32,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/auto1"
-            android:hint="Email ID"
+            android:hint="@string/ad_id"
             />
             
        <Button
@@ -40,7 +40,7 @@
             android:layout_width="75dp"
             android:layout_height="37dp"
             android:layout_toRightOf="@+id/auto2"
-            android:text="Search"
+            android:text="@string/search"
             android:textSize="15.0sp"
             />
        
