--- a/SampleManagement2/res/layout/manage_employee.xml
+++ b/SampleManagement2/res/layout/manage_employee.xml
@@ -14,14 +14,13 @@
         android:padding="@dimen/title_padding"
         android:text="@string/welcome2"
         android:textSize="@dimen/label_font_size" />
-    <!-- 输入用户名的行 -->
 
     <TableRow>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_name"
+            android:text="@string/ad_id"
             android:textSize="@dimen/label_font_size" />
 
         <EditText
@@ -31,24 +30,22 @@
             android:inputType="text" />
     </TableRow>
 
-    <!-- 输入密码的行 -->
 
     <TableRow>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_email"
+            android:text="@string/user_name_manage"
             android:textSize="@dimen/label_font_size" />
 
         <EditText
             android:id="@+id/pwdEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:text="" />
     </TableRow>
-    <!-- 定义登录、取消按钮的行 -->
+
 
     <LinearLayout
         android:layout_width="wrap_content"
