--- a/SampleManagement2/res/layout/manage_main_activity_top_tab.xml
+++ b/SampleManagement2/res/layout/manage_main_activity_top_tab.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/sample_manage"
+                android:text="@string/welcome1"
                 android:textColor="#0000FF"
                 android:textSize="15dip" />
         </LinearLayout>
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/employee_manage"
+                android:text="@string/welcome2"
                 android:textColor="#000000"
                 android:textSize="15dip" />
         </LinearLayout>
