--- a/SampleManagement2/res/layout/manage_sample.xml
+++ b/SampleManagement2/res/layout/manage_sample.xml
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/model_id"
+            android:text="@string/phone_id"
             android:textSize="@dimen/label_font_size" />
 
         <EditText
