--- a/SampleManagement2/res/layout/activity_query_search.xml
+++ b/SampleManagement2/res/layout/activity_query_search.xml
@@ -17,22 +17,20 @@
     
     <AutoCompleteTextView
            android:id="@+id/auto1"
-            android:layout_width="90dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:hint="@string/model_name"
-            android:completionThreshold="1"
-            android:dropDownHeight="1000dp"
-            
-            
+            android:hint="@string/model_name"    
+            android:textSize="15.0sp"                              
             />
             
        <AutoCompleteTextView
             android:id="@+id/auto2"
-            android:layout_width="150dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/auto1"
             android:hint="@string/ad_id"
+            android:textSize="15.0sp"
             />
             
        <Button
