--- a/SampleManagement2/res/layout/activity_query_details.xml
+++ b/SampleManagement2/res/layout/activity_query_details.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"   
+        android:layout_height="match_parent"  
+        android:scrollbars="vertical" >
+        
+ <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -223,3 +230,5 @@
         android:background="@drawable/details_activity2"/>
 
 </LinearLayout>
+
+</ScrollView>
