--- a/SampleManagement2/res/layout/manage_sample.xml
+++ b/SampleManagement2/res/layout/manage_sample.xml
@@ -21,6 +21,34 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/phone_id"
+            android:textSize="@dimen/label_font_size" />
+
+        <EditText
+            android:id="@+id/ModelIDEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/prompt_sample"
+            android:text=""
+            android:textSize="15sp" />
+            <ImageView
+            android:id="@+id/Scan"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/image_top_margin"
+            android:clickable="true"
+            android:scaleType="centerInside"
+            android:src="@drawable/scan" >
+        </ImageView>
+    </TableRow>
+
+    <TableRow>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/model_name_manage"
             android:textSize="@dimen/label_font_size" />
 
@@ -29,21 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
-    </TableRow>
-
-    <TableRow>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/phone_id"
-            android:textSize="@dimen/label_font_size" />
-
-        <EditText
-            android:id="@+id/ModelIDEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="" />
     </TableRow>
     <!-- 定义登录、取消按钮的行 -->
 
