--- a/SampleManagement2/res/layout/manage_main_activity_top_tab.xml
+++ b/SampleManagement2/res/layout/manage_main_activity_top_tab.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-                        android:gravity="center"
+                        android:background="@drawable/guide_round_selector"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="10dip" >
 
@@ -36,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/guide_round_selector"
             android:clickable="true"
             android:gravity="center"
             android:orientation="horizontal"
@@ -60,7 +62,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:contentDescription="tab"
->
+android:background="@drawable/tab_selected_pressed_holo" >
     </ImageView>
 
     <View
