--- a/SampleManagement2/res/drawable/color_edit_text.xml
+++ b/SampleManagement2/res/drawable/color_edit_text.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
      <solid android:color="#00ff00ff"/>  
     <corners android:radius="8px"/>  
-    <stroke android:color="#32CD32"  
+    <stroke android:color="#575757"  
         android:width="2px"  
         /> 
 </shape>
