--- a/SampleManagement2/res/drawable/imageview_bg_color.xml
+++ b/SampleManagement2/res/drawable/imageview_bg_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-  <solid android:color="#E5DFB4" />
-  <stroke android:width="1dp" android:color="#E5DFB4" />     
+  <solid android:color="#BABABA" />
+  <stroke android:width="1dp" android:color="#BABABA" />     
   <corners android:radius="0dp" />     
   <padding android:left="0dp" android:top="0dp"      
     android:right="0dp" android:bottom="0dp" />  
