--- a/SampleManagement2/res/values/dimens.xml
+++ b/SampleManagement2/res/values/dimens.xml
@@ -8,10 +8,11 @@
     <dimen name="textview_top_margin">6dp</dimen>
     <dimen name="linearlayout_right_margin">40dp</dimen>
     <dimen name="linearlayout_end_margin">0dp</dimen>
-    <dimen name="button_width">85dp</dimen>
-    <dimen name="button_height">40dp</dimen>
+    <dimen name="button_width">95dp</dimen>
+    <dimen name="button_height">50dp</dimen>
     <dimen name="button_magin_top">20dp</dimen>
-    <dimen name="button_font_size">13sp</dimen>
+    <dimen name="button_font_size">17sp</dimen>
+    <dimen name="text_font_size">17sp</dimen>
     <dimen name="sub_layout_magin_left">7dp</dimen>
 
 	<dimen name="label_font_size_2">12dip</dimen>
