--- a/SampleManagement2/res/layout/activity_main.xml
+++ b/SampleManagement2/res/layout/activity_main.xml
@@ -2,15 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mmtitle_bg_alpha"
+    android:background="#FFFFFF"
     android:orientation="vertical" >
 	
-    <include
-            android:id="@+id/include1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        layout="@layout/activity_main_title"         />
+<!--     <include
+android:id="@+id/include1"
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:layout_alignParentTop="true"
+        layout="@layout/activity_main_title"         /> -->
         
     
 <GridView
