--- a/SampleManagement2/res/layout/griditem.xml
+++ b/SampleManagement2/res/layout/griditem.xml
@@ -20,7 +20,7 @@
     android:layout_marginTop="5dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="#ffffff"
+    android:textColor="#000000"
     android:text="文字"
 
     />    
