--- a/SampleManagement2/res/layout/file_explorer.xml
+++ b/SampleManagement2/res/layout/file_explorer.xml
@@ -6,9 +6,12 @@
 	<TextView
 		android:id="@+id/path"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal"
-		android:layout_alignParentTop="true"/>
+		android:layout_height="30dp"
+		android:layout_alignBottom="@+id/back"
+		android:gravity="center_vertical"
+		android:layout_alignParentTop="true"
+		android:layout_toRightOf="@+id/back"
+		android:layout_toEndOf="@+id/back"/>
 	<!-- 列出当前路径下所有文件的ListView -->
 	<ListView
 		android:id="@+id/listFile"
@@ -19,9 +22,10 @@
 		android:layout_below="@id/path"/>
 	<!-- 返回上一级目录的按钮 -->
 	<Button android:id="@+id/back"
-		android:layout_width="42dp"
-		android:layout_height="42dp"
+		android:layout_width="30dp"
+		android:layout_height="30dp"
 		android:background="@drawable/back"
-		android:layout_centerHorizontal="true"
-		android:layout_alignParentBottom="true"/>
+		android:layout_alignParentTop="true"
+			android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 </RelativeLayout>
