--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -48,14 +48,14 @@
 
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:text="@string/model_name"
                 android:id="@+id/textView2"/>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="25dp" />
         </TableRow>
 
         <TableRow
@@ -63,14 +63,14 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:text="@string/user_name"
                 android:id="@+id/textView4" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="25dp"/>
         </TableRow>
 
         <TableRow
@@ -79,13 +79,13 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:text="@string/lend_date"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="25dp"/>
         </TableRow>
 
         <TableRow
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:text="@string/return_date"
                 android:id="@+id/textView6"
                 android:autoText="true" />
@@ -101,7 +101,7 @@
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:layout_weight="0.82"/>
         </TableRow>
         </TableLayout>
