--- a/SampleManagement2/res/layout/activity_query_list_item.xml
+++ b/SampleManagement2/res/layout/activity_query_list_item.xml
@@ -9,7 +9,7 @@
 
             <TextView 
                 android:id="@+id/list_body_id"
-                android:layout_width="40dip"
+                android:layout_width="50dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"              
                 android:padding="2dip" 
@@ -19,7 +19,7 @@
          
             <TextView 
                 android:id="@+id/list_body_model"
-                android:layout_width="60dip"
+                android:layout_width="80dip"
                 android:layout_height="wrap_content" 
                 android:layout_gravity="left"
                 android:padding="2dip" 
@@ -78,11 +78,11 @@
             />
             
             <TextView 
-                android:layout_width="35dip" 
+                android:layout_width="45dip" 
                 android:layout_height="wrap_content"
                 android:layout_gravity="left" 
                 android:padding="2dip" 
-                android:text="..."
+                android:text="......"
             />
         
            
