--- a/SampleManagement2/res/layout/activity_query_search.xml
+++ b/SampleManagement2/res/layout/activity_query_search.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="100dp"
     android:orientation="horizontal" 
     android:background="@drawable/details_activity"
-    android:gravity="right"
-    >
+        >
     
     <LinearLayout 
         android:layout_width="0px"  
@@ -15,31 +14,81 @@
         
     </LinearLayout>  
     
+    <LinearLayout 
+        android:layout_width="265dp"  
+        android:layout_height="match_parent" 
+        android:orientation="vertical"
+        android:layout_marginLeft="5dp"
+        >
+        
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+    <TextView 
+                
+                android:text="Model Name" 
+                android:layout_width="105dip"
+                android:layout_height="wrap_content" 
+                android:gravity="center"
+               
+                
+                />
     <AutoCompleteTextView
            android:id="@+id/auto1"
-            android:layout_width="120dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:hint="@string/model_name"    
-            android:textSize="15.0sp"                              
-            />
+            android:layout_marginTop="5dp"
+                                    />
             
+</LinearLayout>  
+     
+
+     <LinearLayout 
+         android:layout_width="match_parent"
+         android:layout_height="40dp"
+         android:orientation="horizontal">
+         <TextView 
+              
+                android:text="AD ID" 
+                android:layout_width="105dip"
+                android:layout_height="wrap_content" 
+                android:gravity="center"
+            
+                />
        <AutoCompleteTextView
             android:id="@+id/auto2"
-            android:layout_width="130dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/auto1"
-            android:hint="@string/ad_id"
-            android:textSize="15.0sp"
-            />
+            android:layout_marginBottom="5dp"
+                                    />
             
-       <Button
+               </LinearLayout>  
+        
+       </LinearLayout>  
+       
+    <LinearLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        
+        >
+     
+        <Button
             android:id="@+id/search"
-            android:layout_width="75dp"
-            android:layout_height="37dp"
-            android:layout_toRightOf="@+id/auto2"
-            android:text="@string/search"
-            android:textSize="15.0sp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="25dp"             
+            android:layout_marginLeft="20dp"           
+            android:background="@drawable/search"
             />
        
+<!--   android:text="@string/search" 
+                   android:textStyle="bold"-->
+            
+            
+            
+     </LinearLayout>
+       
 </LinearLayout>
+
