change sign token

--- a/SampleManagement2/res/layout/activity_lendout.xml
+++ b/SampleManagement2/res/layout/activity_lendout.xml
@@ -49,7 +49,8 @@
                     android:id="@+id/Phone_ID_Edit"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" >
+                    android:layout_weight="1"
+                     >
                 </EditText>
             </LinearLayout>
 
