--- a/SampleManagement2/res/layout/activity_return.xml
+++ b/SampleManagement2/res/layout/activity_return.xml
@@ -30,12 +30,14 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_id"
-                android:id="@+id/textView" />
+                android:id="@+id/textView"
+                android:textSize="@dimen/text_font_size" />
             <EditText
-                android:id="@+id/editText2"
+             android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            
  />
 
 
@@ -50,12 +52,14 @@
                 android:layout_width="80dp"
                 android:layout_height="25dp"
                 android:text="@string/model_name"
-                android:id="@+id/textView2"/>
+                android:id="@+id/textView2"
+                android:textSize="@dimen/text_font_size"/>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="25dp" />
+                android:layout_height="25dp"
+                android:textSize="@dimen/text_font_size" />
         </TableRow>
 
         <TableRow
@@ -65,12 +69,14 @@
                 android:layout_width="80dp"
                 android:layout_height="25dp"
                 android:text="@string/user_name"
-                android:id="@+id/textView4" />
+                android:id="@+id/textView4" 
+                android:textSize="@dimen/text_font_size"/>
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"/>
+                android:layout_height="25dp"
+                android:textSize="@dimen/text_font_size"/>
         </TableRow>
 
         <TableRow
@@ -80,12 +86,14 @@
                 android:id="@+id/textView5"
                 android:layout_width="80dp"
                 android:layout_height="25dp"
-                android:text="@string/lend_date"/>
+                android:text="@string/lend_date"
+                android:textSize="@dimen/text_font_size"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"/>
+                android:layout_height="25dp"
+                android:textSize="@dimen/text_font_size"/>
         </TableRow>
 
         <TableRow
@@ -96,13 +104,15 @@
                 android:layout_height="25dp"
                 android:text="@string/return_date"
                 android:id="@+id/textView6"
-                android:autoText="true" />
+                android:autoText="true"
+                android:textSize="@dimen/text_font_size" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
-                android:layout_weight="0.82"/>
+                android:layout_weight="0.82"
+                android:textSize="@dimen/text_font_size"/>
         </TableRow>
         </TableLayout>
 
