change UI by wjm

--- a/SampleManagement2/res/layout/manage_employee.xml
+++ b/SampleManagement2/res/layout/manage_employee.xml
@@ -43,14 +43,15 @@ android:focusableInTouchMode="true" >
             android:layout_marginTop="@dimen/textview_top_margin"
                 android:layout_weight="2"
                 android:text="@string/ad_id"
-/>
+                android:textSize="@dimen/text_font_size" />
 
         <EditText
             android:id="@+id/userEditText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-                android:textSize="15sp" />
+                android:inputType="textPhonetic"
+                android:textSize="@dimen/text_font_size" />
     </LinearLayout>
     </RelativeLayout>
 
@@ -79,18 +80,26 @@ android:layout_marginRight="@dimen/linearlayout_right_margin"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/textview_top_margin"
                 android:layout_weight="2"
-                android:text="@string/user_name_manage"
-/>
+                android:text="@string/user_name"
+                android:textSize="@dimen/text_font_size" />
 
         <EditText
             android:id="@+id/pwdEditText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-                android:textSize="15sp" />
+                android:textSize="@dimen/text_font_size" />
     </LinearLayout>
 
 </RelativeLayout>
+
+    <TextView
+        android:id="@+id/sample_textview2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/title_padding"
+        android:textSize="@dimen/label_font_size_2" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -102,13 +111,15 @@ android:layout_marginRight="@dimen/linearlayout_right_margin"
             android:id="@+id/bnCancel"
             android:layout_width="@dimen/button_width_m"
             android:layout_height="@dimen/button_height_m"
-            android:text="@string/cancel" />
+            android:background="@drawable/button_selector"
+            android:text="@string/cancel"             android:textStyle="bold" />
 
         <Button
             android:id="@+id/bnedit"
             android:layout_width="@dimen/button_width_m"
             android:layout_height="@dimen/button_height_m"
-            android:text="@string/update" />
+            android:background="@drawable/button_selector"
+            android:text="@string/update"             android:textStyle="bold" />
     </LinearLayout>
 
 </TableLayout>
